# flexalign

./: .gitignore  README.md  pyproject.toml
flexalign/: __init__.py  __main__.py
flexalign/flexalign/: __init__.py  __main__.py  _cli.py  _cli_info.py  _cli_install.py  _cli_job.py  _cli_router.py  _cli_shared.py  backend_registry.py  backend_spec.py  io_registry.py
flexalign/flexalign/align/: __init__.py  aer.py  align_doc.py  apply.py  cascade.py  ir.py  jobs.py  pairwise.py  projection.py  pushdown.py  reconcile.py  rollup.py  segment_adapter.py  tuid.py  tuid_presets.py
flexalign/flexalign/backends/: __init__.py  attribute.py  awesome.py  hunalign.py  identity.py  labse.py
flexalign/flexalign/io/: __init__.py  alignment_io_registry.py  alignment_sets.py  builtin_plain_segment.py  convert_runner.py  flexipipe_plain_bridge.py  jsonio.py  lang_detect.py  minimal_tei_writer.py  moses.py  plain_pipeline.py  tei_adapter.py  teitok.py  teitok_export.py  tmx.py  view_fragments.py  xces.py  xml_id.py
wiki/: Backends.md  Command-aer.md  Command-align.md  Command-apply-tok-refs.md  Command-apply.md  Command-cascade.md  Command-convert.md  Command-info.md  Command-install.md  Command-job.md  Command-migrate-histalign.md  Command-plain.md  Command-pushdown.md  Command-reconcile.md  Command-segment-from-pivot.md  Command-set.md  Concepts.md  Contributing.md  Convert-and-formats.md  Home.md  Installation.md  Quick-Start.md  README.md
